# coursework_1_polina

./: main.py  pyproject.toml
src/: file_worker.py  hh_api_worker.py  vacancies.json  vacancy_worker.py
tests/: test_file_worker.py  test_hh_api_worker.py  test_vacancy_worker.py
