[tool.poetry]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = ["Polyaa <polinasatrajkina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
requests = "^2.32.3"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
